--- a/clusters/work/infra/harbor.yaml
+++ b/clusters/work/infra/harbor.yaml
@@ -13,36 +13,24 @@ spec:
       releaseName: infra-harbor
       values: |
         expose:
-          type: ingress
+          type: nodePort
           tls:
             enabled: true
-            certSource: secret
-            secret:
-              secretName: harbor-tls
-          ingress:
-            className: nginx
-            hosts:
-              core: harbor.lab.local
-            annotations:
-              cert-manager.io/cluster-issuer: lab-ca-issuer
-        externalURL: https://harbor.lab.local
-        harborAdminPassword: "CHANGEME_STRONG"
-        persistence:
-          enabled: true
-          storageClass: longhorn
-          registry:
-            size: 20Gi
-          chartmuseum:
-            size: 5Gi
-          jobservice:
-            jobLog:
-              size: 1Gi
-          database:
-            size: 10Gi
-          redis:
-            size: 5Gi
-          trivy:
-            size: 10Gi
+          nodePort:
+            ports:
+              http:
+                port: 80
+                nodePort: 30080
+              https:
+                port: 443
+                nodePort: 30443
+
+        # Ingress kapansın (nodePort kullanacağız)
+        ingress:
+          enabled: false
+
+        # Harbor external URL (UI için düzgün link üretir)
+        externalURL: https://harbor.lab.local:30443
   destination:
     server: https://kubernetes.default.svc
     namespace: harbor
@@ -52,3 +40,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
