--- a/clusters/work/infra/harbor.yaml
+++ b/clusters/work/infra/harbor.yaml
@@ -16,9 +16,9 @@ spec:
           type: ingress
           tls:
             enabled: true
-            certSource: auto
-            auto:
-              commonName: harbor.lab.local
+            certSource: secret
+            secret:
+              secretName: harbor-tls
           ingress:
             hosts:
               core: harbor.lab.local
