--- a/clusters/work/infra/harbor.yaml
+++ b/clusters/work/infra/harbor.yaml
@@ -28,6 +28,24 @@ spec:
               nginx.ingress.kubernetes.io/ssl-redirect: "true"
               nginx.ingress.kubernetes.io/proxy-body-size: "0"
         externalURL: https://harbor.lab.local
+        persistence:
+          persistentVolumeClaim:
+            registry:
+              storageClass: "longhorn"
+              size: 5Gi
+            jobservice:
+              jobLog:
+                storageClass: "longhorn"
+                size: 1Gi
+            database:
+              storageClass: "longhorn"
+              size: 1Gi
+            redis:
+              storageClass: "longhorn"
+              size: 1Gi
+            trivy:
+              storageClass: "longhorn"
+              size: 5Gi
   destination:
     server: https://kubernetes.default.svc
     namespace: harbor
