harbor: fix ca-download volume and ignore StatefulSet VCT drift

--- a/clusters/work/infra/harbor.yaml
+++ b/clusters/work/infra/harbor.yaml
@@ -28,6 +28,7 @@ spec:
               nginx.ingress.kubernetes.io/ssl-redirect: "true"
               nginx.ingress.kubernetes.io/proxy-body-size: "0"
         externalURL: https://harbor.lab.local
+        caSecretName: ""
         persistence:
           persistentVolumeClaim:
             registry:
