--- a/clusters/work/infra/harbor.yaml
+++ b/clusters/work/infra/harbor.yaml
@@ -29,6 +29,9 @@ spec:
               nginx.ingress.kubernetes.io/proxy-body-size: "0"
         externalURL: https://harbor.lab.local
         caSecretName: ""
+        containerSecurityContext:
+          runAsNonRoot: true
+          allowPrivilegeEscalation: false
         core:
           resources:
             requests:
